added vulnerablity to  calculator code

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,8 +9,9 @@ sonar.tests=spec
 sonar.test.inclusions=**/*_spec.rb
 sonar.exclusions=**/vendor/**
 
-sonar.ruby.coverage.reportPaths=coverage/coverage.json
+sonar.coverageReportPaths=coverage/cobertura.xml
 
+# sonar.ruby.coverage.reportPaths=./coverage/coverage.xml
 sonar.pdf.issue.details=BUG,CODE_SMELL,VULNERABILITY
 sonar.pdf.other.metrics=coverage
 sonar.pdf.skip=true
