added vulnerablity to  calculator code

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,14 +4,19 @@ sonar.projectName=25.1_Ruby
 sonar.projectVersion=1
 sonar.host.url=http://172.27.59.174:9000/
 sonar.token=squ_0baca30bc8f475bd45436c85495de3810ae4546f
-sonar.sources=.
+sonar.sources=lib
 sonar.tests=spec
 sonar.test.inclusions=**/*_spec.rb
 sonar.exclusions=**/vendor/**
+# # sonar.ruby.coverage.reportPaths=coverage/coverage.xml
+# sonar.coverageReportPaths=coverage/coverage.xml
+## Use LCOV (SimpleCov LCov formatter) to avoid Cobertura/generic XML version mismatch
+sonar.coverageReportPaths=coverage/lcov.info
+# If you still need Cobertura XML for other tools, keep it in the coverage/ folder but
+# do not point Sonar at it to avoid parsing errors (Cobertura XML produced by some
+# SimpleCov converters sets version="0" which Generic Coverage parser rejects).
+# sonar.cobertura.reportPath=coverage/coverage.xml
 
-sonar.coverageReportPaths=coverage/cobertura.xml
-
-# sonar.ruby.coverage.reportPaths=./coverage/coverage.xml
-sonar.pdf.issue.details=BUG,CODE_SMELL,VULNERABILITY
-sonar.pdf.other.metrics=coverage
-sonar.pdf.skip=true
+# sonar.pdf.issue.details=BUG,CODE_SMELL,VULNERABILITY
+# sonar.pdf.other.metrics=coverage
+# sonar.pdf.skip=true
